--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,8 +1,9 @@
 <div ng-app="app">
   <div ng-controller="taskCtrl">
-    <li ng-repeat="task in tasks">
+    <li ng-repeat="task in tasks track by $index" ng-click="deleteTask($index)" ng-if="isPositive(task)">
     {{ task }}
     </li>
+    
     <input ng-model="newTask">
     <button ng-click="addTask(newTask)">Add Task</button>
   </div>
